--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "main": "index.js",
   "scripts": {
+    "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
@@ -20,8 +21,13 @@
     "@babel/core": "^7.5.4",
     "@babel/node": "^7.5.0",
     "@babel/preset-env": "^7.5.4",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.0"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
   }
 }
