--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "brain-games",
+  "name": "brain-games-yevkos",
   "version": "1.0.0",
   "description": "",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
