addded brain-gcd

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "brain-games-yevkos",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "bin": {
     "brain-games": "dist/bin/games/brain-games.js",
     "brain-even": "dist/bin/games/brain-even.js",
-    "brain-calc": "dist/bin/games/brain-calc.js"
+    "brain-calc": "dist/bin/games/brain-calc.js",
+    "brain-gcd": "dist/bin/games/brain-gcd.js"
   },
   "files": [
     "dist"
