--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "brain-games-yevkos",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "",
   "bin": {
     "brain-games": "dist/bin/games/brain-games.js",
     "brain-even": "dist/bin/games/brain-even.js",
     "brain-calc": "dist/bin/games/brain-calc.js",
-    "brain-gcd": "dist/bin/games/brain-gcd.js"
+    "brain-gcd": "dist/bin/games/brain-gcd.js",
+    "brain-progression": "dist/bin/games/brain-progression.js"
   },
   "files": [
     "dist"
