--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "brain-games-yevkos",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "description": "",
   "bin": {
     "brain-games": "dist/bin/games/brain-games.js",
     "brain-even": "dist/bin/games/brain-even.js",
     "brain-calc": "dist/bin/games/brain-calc.js",
     "brain-gcd": "dist/bin/games/brain-gcd.js",
-    "brain-progression": "dist/bin/games/brain-progression.js"
+    "brain-progression": "dist/bin/games/brain-progression.js",
+    "brain-prime": "dist/bin/games/brain-prime.js"
   },
   "files": [
     "dist"
@@ -32,6 +33,6 @@
     "eslint-plugin-import": "^2.18.0"
   },
   "dependencies": {
-    "readline-sync": "^1.4.9"
+    "readline-sync": "^1.4.10"
   }
 }
