--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brain-games-yevkos",
   "version": "1.0.8",
-  "description": "",
+  "description": "Several numerical games",
   "bin": {
     "brain-games": "dist/bin/games/brain-games.js",
     "brain-even": "dist/bin/games/brain-even.js",
@@ -19,7 +19,11 @@
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
-  "author": "",
+  "keywords": [
+    "games",
+    "brain-games"
+  ],
+  "author": "Yevhen",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.5.0",
