--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,15 +1,10 @@
 plugins:
   - babel
 env:
-  es6: true
   node: true
+parser: 
+  babel-eslint
 extends:
   - airbnb-base
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parserOptions:
-  ecmaVersion: 2018
-  sourceType: module
 rules:
   no-console: 0
