--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "brain-games-yevkos",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "Several numerical games",
   "bin": {
-    "brain-games": "dist/bin/games/brain-games.js",
-    "brain-even": "dist/bin/games/brain-even.js",
-    "brain-calc": "dist/bin/games/brain-calc.js",
-    "brain-gcd": "dist/bin/games/brain-gcd.js",
-    "brain-progression": "dist/bin/games/brain-progression.js",
-    "brain-prime": "dist/bin/games/brain-prime.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
@@ -36,7 +35,7 @@
     "eslint-plugin-import": "^2.18.0"
   },
   "dependencies": {
-    "@hexlet/pairs": "^1.0.10",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "@hexlet/pairs": "^1.0.10"
   }
 }
